src/frontend/src/app/home-page/popups/popups.component.css
.popup-container {
  display: flex;
  justify-content: center;
  align-items: center;
  position: fixed;
  z-index: 1;
  top: 0;
  left: 80px;
  width: calc(100% - 80px);
  height: 100%;
  overflow: auto;
  transition: 0.3s;
}

.popup-full-collapsed {
  left: 250px;
  width: calc(100% - 250px);

  height: calc(100% - 300px);
}

.popup-full-collapsed {
  left: 80px;
  width: calc(100% - 80px);

  height: 100%;
}

.popup-nav-collapsed {
  left: 250px;
  width: calc(100% - 250px);

  height: 100%;
}

.popup-chat-collapsed {
  left: 80px;
  width: calc(100% - 80px);

  height: calc(100% - 300px);
}

.popup-window {
  background-color: #2c3649;
  height: 80%;
  width: 90%;
  padding: 10px;
  border-radius: 15px;
}

.popup-header {
  text-align: center;
  color: white;
  font-family: 'Roboto', sans-serif;
  font-size: large;
  font-weight: bold;
  height: 32px;
}

.popup-close {
  float: right;
  cursor: pointer;
  border-radius: 50%;
  background-color: transparent;
  border: none;
}

.popup-content {
  background-color: green;
}

